# pubmed-scraper-shyamsai

./: README.md  pyproject.toml  result.csv
pubmed_scraper_shyamsai/: cli.py  scraper.py
